fixed overflow

--- a/css/app.css
+++ b/css/app.css
@@ -53,7 +53,9 @@ html {
 body {
   line-height: 1.5;
   font-size: 1rem;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+overflow-x: hidden !important;
+}
 
 .config {
   overflow: hidden; }
